deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waldritter-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - project-api.waldritter.dev
        - project-db.waldritter.dev
        - projects.waldritter.dev
      secretName: waldritter-tls
  rules:
    - host: project-api.waldritter.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-api
                port:
                  number: 3000
    - host: project-db.waldritter.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-ui
                port:
                  number: 8080
    - host: projects.waldritter.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-ui
                port:
                  number: 4321
